@@ -46,19 +46,6 @@ AC_ARG_ENABLE(debug,
     ]
 )
 
-dnl Test for socklen_t and define it to int if it's not there.
-dnl socklen_t should be used with functions like getpeername and recvfrom because
-dnl some platforms use int*'s and some use size_t*'s. Note that we can't simply
-dnl use AC_CHECK_TYPE because socklen_t isn't in the standard headers.
-AC_MSG_CHECKING(if socklen_t is defined)
-AC_TRY_COMPILE(
-   [#include <sys/socket.h>],
-   [socklen_t len = 42; return len;],
-   		[AC_MSG_RESULT(yes)],
-   		[AC_MSG_RESULT(no)
-    		AC_DEFINE(socklen_t, int, need to define this on BSD platforms)]) 
-
-
 dnl Test for ANSI standard language features
 
 dnl Test for C++ bool keyword
@@ -312,6 +299,14 @@ AC_SUBST(SKSTREAM_TIMEVAL_HEADER)
 AC_SUBST(SKSTREAM_UNIX_HEADER_FLAG)
 AC_SUBST(SKSTREAM_BEOS_HEADER_FLAG)
 AC_SUBST(SKSTREAM_WINDOWS_HEADER_FLAG)
+
+AC_LANG_RESTORE
+
+dnl Test for C library functions
+
+AC_LANG_SAVE
+AC_LANG_CPLUSPLUS
+AC_CHECK_FUNCS([getaddrinfo])
 
 AC_LANG_RESTORE
 
